# genshi

./: .gitignore  Cargo.toml  DOCS.md  GUIDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  Technical_Req.md  improvements.md
benches/: transfer_proof.rs
crates/genshi-cli/: Cargo.toml  README.md
crates/genshi-cli/src/: ceremony.rs  lib.rs  main.rs
crates/genshi-core/: Cargo.toml  README.md
crates/genshi-core/src/: circuit.rs  lib.rs  note.rs  witness.rs
crates/genshi-core/src/crypto/: mod.rs
crates/genshi-core/src/crypto/curves/: grumpkin.rs
crates/genshi-core/src/crypto/fields/: mod.rs
crates/genshi-core/src/gadgets/: commitment.rs  merkle.rs  mod.rs  poseidon2_gadget.rs
crates/genshi-core/src/proving/: api.rs  kzg.rs  mod.rs  prover.rs  serialization.rs  srs.rs  transcript.rs  types.rs  verifier.rs
crates/genshi-core/tests/: determinism.rs
crates/genshi-emit-solana/: Cargo.toml  README.md  build.rs
crates/genshi-emit-solana/assets/: transcript.rs  verifier.rs
crates/genshi-emit-solana/src/: config.rs  emitter.rs  lib.rs
crates/genshi-emit-solana/src/templates/: cargo_toml.rs  lib_rs.rs  mod.rs  pairing_constants.rs  vk_constants.rs  workspace_toml.rs  xargo_toml.rs
crates/genshi-emit-solana/tests/: check_emitted.rs  emit_roundtrip.rs
crates/genshi-evm/: Cargo.toml  README.md
crates/genshi-evm/src/: poseidon2_sol.rs  solidity_emitter.rs
crates/genshi-math/: Cargo.toml  README.md
crates/genshi-math/src/: lib.rs
crates/genshi-math/src/bpf/: curve.rs  fr.rs  keccak.rs  mod.rs  pairing.rs
crates/genshi-math/src/native/: curve.rs  fr.rs  keccak.rs  mod.rs  pairing.rs
crates/genshi-math/tests/: bpf_frame_audit.rs  circom_vectors.rs  fr_parity.rs  g1_parity.rs  pairing_parity.rs
crates/genshi-solana/: Cargo.toml  README.md
crates/genshi-solana/src/: lib.rs  verify.rs
crates/genshi-solana/src/crypto/: mod.rs
crates/genshi-wasm/: Cargo.toml  README.md
crates/genshi-wasm/src/: lib.rs
crates/shroud-cli/: Cargo.toml
crates/shroud-cli/src/: main.rs
crates/shroud-core/: Cargo.toml
crates/shroud-core/benches/: transfer_proof.rs
crates/shroud-core/src/: lib.rs  note.rs  witness.rs
crates/shroud-core/src/arithmetization/: lookup_tables.rs  ultra_circuit_builder.rs  witness.rs
crates/shroud-core/src/circuits/: mod.rs  transfer.rs  withdraw.rs
crates/shroud-core/src/circuits/gadgets/: merkle.rs  mod.rs  note_commitment.rs  nullifier.rs  poseidon2_gadget.rs  range_proof.rs
crates/shroud-core/src/crypto/: mod.rs  pedersen.rs  poseidon2.rs
crates/shroud-core/src/crypto/fields/: bn254_base.rs  bn254_scalar.rs
crates/shroud-core/src/proving/: kzg.rs  mod.rs  prover.rs  srs.rs  transcript.rs  verifier.rs
crates/shroud-evm/: Cargo.toml
crates/shroud-evm/contracts/: ShieldedPool.sol
crates/shroud-evm/src/: lib.rs  poseidon2_sol.rs  solidity_emitter.rs
crates/shroud-evm/src/templates/: README.md
crates/shroud-solana/: Cargo.toml
crates/shroud-solana/src/: lib.rs  verify.rs
crates/shroud-solana/src/crypto/: mod.rs
crates/shroud-wasm/: Cargo.toml
crates/shroud-wasm/js/: shroud-sdk.js
crates/shroud-wasm/src/: lib.rs
genshi/: Cargo.toml
genshi/crates/genshi-cli/: Cargo.toml
genshi/crates/genshi-cli/src/: lib.rs
genshi/crates/genshi-core/: Cargo.toml
genshi/crates/genshi-core/src/arithmetization/: lookup_tables.rs  ultra_circuit_builder.rs
genshi/crates/genshi-core/src/crypto/: pedersen.rs  poseidon2.rs
genshi/crates/genshi-core/src/crypto/fields/: bn254_scalar.rs
genshi/crates/genshi-core/src/gadgets/: commitment.rs  mod.rs  nullifier.rs  poseidon2_gadget.rs
genshi/crates/genshi-core/src/proving/: api.rs  prover.rs
genshi/crates/genshi-evm/: Cargo.toml
genshi/crates/genshi-evm/src/: lib.rs  solidity_emitter.rs
genshi/crates/genshi-solana/: Cargo.toml
genshi/crates/genshi-solana/src/: lib.rs
genshi/crates/genshi-wasm/: Cargo.toml
genshi/scripts/: test.sh
janus/: Cargo.toml
janus/crates/janus-cli/: Cargo.toml
janus/crates/janus-cli/src/: lib.rs  main.rs
janus/crates/janus-core/: Cargo.toml
janus/crates/janus-core/src/: circuit.rs  lib.rs
janus/crates/janus-core/src/arithmetization/: mod.rs  ultra_circuit_builder.rs  witness.rs
janus/crates/janus-core/src/crypto/: mod.rs  pedersen.rs  poseidon2.rs
janus/crates/janus-core/src/crypto/curves/: bn254.rs  mod.rs
janus/crates/janus-core/src/crypto/fields/: bn254_scalar.rs
janus/crates/janus-core/src/gadgets/: merkle.rs  poseidon2_gadget.rs  range_proof.rs
janus/crates/janus-core/src/proving/: api.rs  kzg.rs  mod.rs  prover.rs  serialization.rs  srs.rs  transcript.rs  verifier.rs
janus/crates/janus-evm/: Cargo.toml
janus/crates/janus-evm/src/: lib.rs  poseidon2_sol.rs  solidity_emitter.rs
janus/crates/janus-solana/: Cargo.toml
janus/crates/janus-solana/src/: lib.rs  verify.rs
janus/crates/janus-solana/src/crypto/: mod.rs
janus/crates/janus-wasm/: Cargo.toml
janus/crates/janus-wasm/src/: lib.rs
