


[workspace]
members = [
    "crates/genshi-core",
    "crates/genshi-evm",
    "crates/genshi-math",
    "crates/genshi-solana",
    "crates/genshi-wasm",
    "crates/genshi-cli",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shroud-network/genshi"
homepage = "https://github.com/shroud-network/genshi"
description = "Generalized dual-VM zero-knowledge proving framework (EVM + Solana)"
authors = ["Shroud Network"]

[workspace.dependencies]
# Arkworks ecosystem (v0.5.0)
ark-bn254 = { version = "0.5", default-features = false }
ark-grumpkin = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-poly-commit = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }

# Hashing
sha2 = { version = "0.10", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Internal framework crates. Both `path` and `version` are set so local
# development resolves through the workspace while `cargo publish` records
# a real version requirement in the registry.
genshi-core   = { path = "crates/genshi-core",   version = "0.2.0" }
genshi-evm    = { path = "crates/genshi-evm",    version = "0.2.0" }
genshi-math   = { path = "crates/genshi-math",   version = "0.2.0", default-features = false }
genshi-solana = { path = "crates/genshi-solana", version = "0.2.0" }
genshi-wasm   = { path = "crates/genshi-wasm",   version = "0.2.0" }

# Serialization (optional)
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"

# Tooling
clap = { version = "4", features = ["derive"] }
inventory = "0.3"

# Crypto utilities
rand = "0.8"
zeroize = "1"

# Testing
criterion = "0.5"
