[package]
name = "genshi-cli"
description = "Framework tooling for genshi — SRS generation, verifier emission, circuit-aware CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["zero-knowledge", "cryptography", "cli", "plonk", "zkp"]
categories = ["command-line-utilities", "cryptography"]

# `genshi-cli` is dual-purpose:
#
#   * As a **library**, downstream crates depend on it, call
#     `genshi_cli::register!(MyCircuit, "my-circuit")` next to their `Circuit`
#     impls, and add a one-line `src/bin/genshi.rs` that calls
#     `genshi_cli::run()`. Cargo auto-discovers that bin, so the consumer then
#     runs `cargo run --bin genshi -- …` and gets a CLI that knows about their
#     circuits — no other boilerplate.
#
#   * As a **binary** (the `genshi` executable shipped in this crate), it
#     exposes the circuit-agnostic commands (SRS generation, Solidity library
#     emission, inspect, verify). That binary simply delegates to `run()`
#     with an empty registry.
[lib]
name = "genshi_cli"
path = "src/lib.rs"

[[bin]]
name = "genshi"
path = "src/main.rs"

[dependencies]
genshi-core = { workspace = true, features = ["serde"] }
genshi-evm = { workspace = true }
clap = { workspace = true }
inventory = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
