[package]
name = "genshi-core"
description = "Core cryptographic library for the genshi dual-VM ZK framework (PLONK-KZG over BN254/Grumpkin, Poseidon2, Keccak transcript)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["zero-knowledge", "cryptography", "plonk", "snark", "zkp"]
categories = ["cryptography", "no-std"]

[dependencies]
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
ark-poly-commit = { workspace = true }
ark-serialize = { workspace = true }
sha2 = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
ark-std = { version = "0.5", features = ["std"] }
criterion = { workspace = true }

[features]
default = ["std", "parallel"]
serde = ["dep:serde"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-bn254/std",
    "ark-grumpkin/std",
    "ark-poly/std",
]
# Rayon-parallel MSMs and FFTs. Requires `std`. Off by default on no_std
# targets (Solana BPF, WASM without threads).
parallel = [
    "std",
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
]
