[package]
name = "genshi-core"
description = "Core cryptographic library for the genshi dual-VM ZK framework (PLONK-KZG over BN254/Grumpkin, Poseidon2, Keccak transcript)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["zero-knowledge", "cryptography", "plonk", "snark", "zkp"]
categories = ["cryptography", "no-std"]

[dependencies]
# Backend-agnostic field/curve/pairing surface used by the verifier. Native
# feature (arkworks) is the default; emitted BPF programs flip this to `bpf`.
genshi-math = { workspace = true }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
ark-poly-commit = { workspace = true }
ark-serialize = { workspace = true }
sha2 = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
ark-std = { version = "0.5", features = ["std"] }
criterion = { workspace = true }

[features]
default = ["std", "parallel", "prover", "math-native"]
serde = ["dep:serde"]
# Enables proof generation: arithmetization, gadgets, and the prover module.
# Off on Solana BPF where only the verifier is needed — strips ~70% of code.
prover = []
# Select the genshi-math backend. Exactly one of `math-native` / `math-bpf`
# must be on. `math-native` routes through arkworks (host + WASM); `math-bpf`
# routes through Solana syscalls + hand-rolled Fr (emitted Anchor programs).
math-native = ["genshi-math/native"]
math-bpf = ["genshi-math/bpf"]
# BPF math on host: for testing the verifier against BPF types without a
# real Solana target. Enables arkworks fallback for curve/pairing ops.
math-bpf-host = ["genshi-math/bpf", "genshi-math/host-test"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-bn254/std",
    "ark-grumpkin/std",
    "ark-poly/std",
]
# Rayon-parallel MSMs and FFTs. Requires `std`. Off by default on no_std
# targets (Solana BPF, WASM without threads).
parallel = [
    "std",
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
]
