[package]
name = "genshi-math"
description = "BN254 field, curve, and pairing abstraction with swappable native (arkworks) and BPF (Solana syscalls + hand-rolled Fr) backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["zero-knowledge", "bn254", "cryptography", "solana", "no-std"]
categories = ["cryptography", "no-std"]

[dependencies]
# Native backend dependencies — optional so the BPF backend can drop them.
ark-bn254 = { workspace = true, optional = true }
ark-ec = { workspace = true, optional = true }
ark-ff = { workspace = true, optional = true }
ark-serialize = { workspace = true, optional = true }

# BPF backend: BN254 syscalls extracted from solana-program into solana-bn254.
# Pinned to a ^2 range so we accept 2.2.x on older toolchains and 3.x on Agave
# 3.1+ clients — the `alt_bn128_{addition,multiplication,pairing}` ABI has been
# stable across all of these.
solana-bn254 = { version = ">=2.2,<4", optional = true }
# Used to declare the sol_keccak256 syscall for the BPF transcript hasher.
# `define_syscall!` macro has the same signature across 2.x through 5.x.
solana-define-syscall = { version = ">=2.3,<6", optional = true }

# Native-side Keccak for proving/WASM host verification. BPF uses sol_keccak256.
tiny-keccak = { version = "2.0", features = ["keccak"], optional = true }

[dev-dependencies]
rand = { workspace = true }
ark-bn254 = { version = "0.5", features = ["curve", "std"] }
ark-ec = { version = "0.5" }
ark-ff = { version = "0.5" }
ark-serialize = { version = "0.5" }

[features]
# One of { native, bpf } must be enabled. They are mutually exclusive.
# `native` is the default for host/wasm builds; `bpf` is what emitted Solana
# programs enable to route arithmetic through `sol_alt_bn128_*` syscalls.
default = ["native"]
native = [
    "dep:ark-bn254",
    "dep:ark-ec",
    "dep:ark-ff",
    "dep:ark-serialize",
    "dep:tiny-keccak",
    "ark-bn254/curve",
    "ark-bn254/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-serialize/std",
]
bpf = ["dep:solana-bn254", "dep:solana-define-syscall"]
# Enables arkworks alongside the BPF backend for host-side testing. This
# provides `from_ark` conversion methods on BPF types and arkworks-backed
# fallbacks for syscall operations (G1 add, scalar mul, pairing). Only
# meaningful when combined with `bpf`; on real Solana BPF targets the
# syscall paths are used instead.
host-test = [
    "dep:ark-bn254",
    "dep:ark-ec",
    "dep:ark-ff",
    "dep:ark-serialize",
    "dep:tiny-keccak",
    "ark-bn254/curve",
    "ark-bn254/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-serialize/std",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
