[package]
name = "genshi-wasm"
description = "Browser WASM helpers for the genshi framework — applications wrap this with their own cdylib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["zero-knowledge", "wasm", "cryptography", "plonk", "zkp"]
categories = ["wasm", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
genshi-core = { path = "../genshi-core", version = "0.2.0", default-features = false, features = ["serde", "math-native", "prover"] }
genshi-math = { workspace = true, features = ["native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }

# Activated automatically when building for wasm32 target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
std = ["genshi-core/std"]
