[package]
name = "shroud-cli"
description = "Development CLI tooling for shroud-honk — never deployed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "shroud-cli"
path = "src/main.rs"

[dependencies]
shroud-core = { workspace = true, features = ["serde"] }
clap = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
