[package]
name = "shroud-core"
description = "Core cryptographic library for shroud-honk proving scheme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
ark-poly-commit = { workspace = true }
ark-serialize = { workspace = true }
sha2 = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
ark-std = { version = "0.5", features = ["std"] }
criterion = { workspace = true }

[[bench]]
name = "transfer_proof"
harness = false

[features]
default = ["std"]
serde = ["dep:serde"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-bn254/std",
    "ark-grumpkin/std",
    "ark-poly/std",
]
