[package]
name = "shroud-evm"
description = "EVM verifier generation for shroud-honk — Solidity contracts using BN254 precompiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shroud-core = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
