[package]
name = "shroud-solana"
description = "Solana program for shroud-honk on-chain verification via sol_alt_bn128_* syscalls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shroud-core = { path = "../shroud-core", default-features = false }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
