[package]
name = "janus-solana"
description = "Solana BPF verifier for the Janus framework via sol_alt_bn128_* syscalls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
janus-core = { path = "../janus-core", default-features = false }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }

[features]
default = ["std"]
std = ["janus-core/std"]
